# KellyNN

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  TODO  kernels.list
docs/: bet.gnuplot
kls/: opencl_bet_sum.cl  opencl_copy.cl  opencl_find_winning_neurons.cl  opencl_find_winning_neurons2.cl  opencl_find_winning_synapses.cl  opencl_neuron_refresh.cl  opencl_npay.cl  opencl_pay.cl  opencl_synaps_bet.cl  opencl_synaps_learn.cl  opencl_synaps_learn2.cl  opencl_synaps_learn_negation.cl  opencl_update_synaps_info.cl
kls/old/: opencl_synaps_die.dummy.cl  opencl_synaps_die.orig.cl
kls/originals/: opencl_synaps_bet.cl  opencl_synaps_learn.cl  opencl_synaps_refresh.cl  opencl_update_synaps_info.cl
src/: brain  brain.cc  brain.h  brain_functions.cc  brain_functions.h  emotion.h  main.cc  neural_map.cc  neural_map.h  robotio.cc  robotio.h  test.cpp  timer.cc  timer.hh
tests/: brain_functions_tests.cc  brain_functions_tests.h  neural_map_tests.cc  neural_map_tests.h  simple_opencl_class.cc  simple_opencl_class.h  simple_opencl_test.cc
